--- a/templates/neverever/newStatement.html
+++ b/templates/neverever/newStatement.html
@@ -24,7 +24,7 @@
                     <div class="container row-spacing">
                       <div class="add-container text-left">
                           {{ field.help_text }}...
-                          <input type="text" class="form-control new-statement" id="{{ field.auto_id }}" placeholder="added a new statement.">
+                         <!-- <input type="text" class="form-control new-statement" id="{{ field.auto_id }}" placeholder="added a new statement."> -->
                       </div>
                     </div>
                 {% endif %}
@@ -35,7 +35,7 @@
                             <h2>classify your statement</h2>
                         </div>
                          Adult (NSFW) or clean (SFW) content:
-                         <input id="{{ field.auto_id }}" name="{{ field.html_name }}" type="checkbox">
+                         <!-- <input id="{{ field.auto_id }}" name="{{ field.html_name }}" type="checkbox"> -->
                      </div>
                 {% endif %}
                 {% if field.name == "categories" %}
@@ -45,9 +45,15 @@
                         <h2>select categories</h2>
                     </div>
                     Please choose all applicable categories:
-                    {{ field }}
+                  <!--  {% for cat in form.categories.field.choices %}
+                    <div class="row cat-spacing">
+                        {{ cat }}-<input id="id_categories_{{ cat.0 }}" name="id_categories_{{ cat.0 }}" value="{{ cat.0 }}" type="checkbox"><br>
+                    </div>
+                    {% endfor %} -->
+
                 </div>
                 {% endif %}
+        {{ field }}
             {% endfor %}
             <br>
             <div class="container">
