--- a/templates/neverever/newStatement.html
+++ b/templates/neverever/newStatement.html
@@ -23,8 +23,14 @@
                     </div>
                     <div class="container row-spacing">
                       <div class="add-container text-left">
+                          {% if field.errors %}
+                            <div class="alert alert-danger text-center" role="alert">
+                                <strong>Ups!</strong> You forgot to enter a statement.
+                            </div>
+                          {% endif %}
                           {{ field.help_text }}...
-                         <!-- <input type="text" class="form-control new-statement" id="{{ field.auto_id }}" placeholder="added a new statement."> -->
+                          <input type="text" class="form-control new-statement" id="{{ field.auto_id }}" name="{{ field.name }}" placeholder="added a new statement.">
+
                       </div>
                     </div>
                 {% endif %}
@@ -35,7 +41,7 @@
                             <h2>classify your statement</h2>
                         </div>
                          Adult (NSFW) or clean (SFW) content:
-                         <!-- <input id="{{ field.auto_id }}" name="{{ field.html_name }}" type="checkbox"> -->
+                         <input id="{{ field.auto_id }}" name="{{ field.html_name }}" type="checkbox">
                      </div>
                 {% endif %}
                 {% if field.name == "categories" %}
@@ -44,16 +50,20 @@
                         <h4><span class="glyphicon glyphicon-tags"></span></h4>
                         <h2>select categories</h2>
                     </div>
+                    {% if field.errors %}
+                        <div class="add-container alert alert-danger text-center" role="alert">
+                            <strong>Ups!</strong> Please select at least one category.
+                        </div>
+                    {% endif %}
                     Please choose all applicable categories:
                   <!--  {% for cat in form.categories.field.choices %}
                     <div class="row cat-spacing">
                         {{ cat }}-<input id="id_categories_{{ cat.0 }}" name="id_categories_{{ cat.0 }}" value="{{ cat.0 }}" type="checkbox"><br>
                     </div>
                     {% endfor %} -->
-
+                    {{ field }}
                 </div>
                 {% endif %}
-        {{ field }}
             {% endfor %}
             <br>
             <div class="container">
