stats page - here's a rough version of what I'm thinking; basically we've got the list of statements, which can be filtered by category. When we click on a statement the stats for that statement are shown. If we style this so the stats are shown in big writing and that sort of thing and maybe add some pie charts or something if possible then it could be quite cool

--- a/templates/neverever/statementStats.html
+++ b/templates/neverever/statementStats.html
@@ -1,22 +1,17 @@
-{% if statements %}
-    <br />
-    {% for statement in statements %}
-        "Never have I ever {{ statement.title }}":
-        {% if statement.total %}
-            {{ statement.yes }}
-            {% if statement.yes_percentage %}
-                ({{ statement.yes_percentage }}%)
-            {% endif %}
-            answered Yes.
-            {{ statement.no }}
-            {% if statement.no_percentage %}
-                ({{ statement.no_percentage }}%)
-            {% endif %}
-            answered No.
-            (Total: {{ statement.total }})
-        {% else %}
-            No answers yet.
-        {% endif %}
-        <br />
-    {% endfor %}
-{% endif %}
+<br />
+    "Never have I ever {{ title }}":
+    <br/>
+    {{ yes }}
+    {% if yes_percentage %}
+        ({{ yes_percentage }}%)
+    {% endif %}
+    answered Yes.
+    <br/>
+    {{ no }}
+    {% if no_percentage %}
+        ({{ no_percentage }}%)
+    {% endif %}
+    answered No.
+    <br/>
+    (Total: {{ total }})
+<br />
