--- a/templates/neverever/play.html
+++ b/templates/neverever/play.html
@@ -19,8 +19,7 @@
                     {% endfor %}
                     {% if statement.nsfw %}
                         <div class="label label-warning">NSFW</div>
-                    {% endif %}
-
+                    {% endif %}&nbsp;&nbsp;
                     <!--below section adds in the like button-->
                     <button id="likes" data-title="{{statement.title}}" class="btn btn-info btn-xs" type="button">
                         <span class="glyphicon glyphicon-thumbs-up"></span> Like
@@ -67,9 +66,9 @@
 
     <div class="container-fluid">
             <div class="row row-spacing">
-                <button id="add_button" class="btn btn-info" type="button">Add Player</button>
-                <a href="{% url 'play_options' %}" class="btn btn-info">Options</a>
-                <a href="{% url 'play_summary' %}" class="btn btn-warning">Final Stats Page</a>
+                <button id="add_button" class="btn btn-default" type="button">Add Player</button>&nbsp;
+                <a href="{% url 'play_options' %}" class="btn btn-default">Options</a>&nbsp;
+                <a href="{% url 'play_summary' %}" class="btn btn-warning">Your Statistics</a>
             </div>
     </div>
 {% endblock %}
