--- a/static/css/index.css
+++ b/static/css/index.css
@@ -8,14 +8,27 @@ body{
   color: #ffffff;
 }
 
+h1 {
+    font-size: 100px;
+}
+
 .navbar {
    margin-bottom: 0px;
 }
 
 .page-header {
-    margin-top: 0px;
-    padding: 15px 0 15px 0;
-    background-color:rgba(51,51,51,0.6);
+    margin: 0;
+    padding: 15px 0 0 0;
+    border: none;
+}
+
+
+.vertical-center {
+  min-height: 40%;
+  min-height: 40vh;
+
+  display: flex;
+  align-items: center;
 }
 
 .footer {
@@ -34,7 +47,7 @@ body{
 	bottom: 45px;
 	font-size: 0.8em;
 	z-index: 1000;
-    background-color:rgba(51,51,51,0.8);
+    background-color:rgba(255,133,27,0.8);
 	padding:5px;
 	text-align:center;
 	width:100%;
@@ -43,5 +56,9 @@ body{
 
 #cookie_box a:hover {
     color:#ffffff;
-    text-decoration: underline
+    text-decoration: underline;
+}
+
+#cookie_box a {
+    color:#333333;
 }
