minor frontpage changes

--- a/templates/neverever/index.html
+++ b/templates/neverever/index.html
@@ -9,7 +9,7 @@
 
 {% block body_block %}
     <div class="page-header text-center">
-        <h1>never/<b>ever</b></h1>
+        <h1>never/<wbr><b>ever</b></h1>
         <p class="lead">Play never have I ever. Wherever you are.</p>
     </div>
 
