--- a/static/css/index.css
+++ b/static/css/index.css
@@ -20,6 +20,7 @@ h1 {
     margin: 0;
     padding: 15px 0 0 0;
     border: none;
+    word-wrap: break-word;
 }
 
 
@@ -61,4 +62,8 @@ h1 {
 
 #cookie_box a {
     color:#333333;
+}
+
+.btn {
+    box-shadow: 0px 0px 10px #222222;
 }
