--- a/templates/neverever/index.html
+++ b/templates/neverever/index.html
@@ -21,7 +21,7 @@
                 <div class="row row-spacing">
                     <a href="/new-statement" class="btn btn-default btn-lg center-block btn-ne-main">New Statement</a>
                 </div>
-        </div>12
+        </div>
     </div>
 
     <div id="cookie_box">
