--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,6 +1,5 @@
-body{
+.index-bg{
 	background:url('../img/index_banner.jpg') no-repeat center center;
-	min-height:100%;
 	background-size:cover;
 }
 
@@ -27,7 +26,6 @@ h1 {
 .vertical-center {
   min-height: 40%;
   min-height: 40vh;
-  margin-bottom: 20px;
 
   display: flex;
   align-items: center;
