--- a/templates/neverever/index.html
+++ b/templates/neverever/index.html
@@ -8,6 +8,7 @@
 {% endblock %}
 
 {% block body_block %}
+<div class="index-bg">
     <div class="page-header text-center">
         <h1>never/<wbr><b>ever</b></h1>
         <p class="lead">Play never have I ever. Wherever you are.</p>
@@ -20,7 +21,7 @@
                 </div>
                 <div class="row row-spacing">
                     <a href="/new-statement" class="btn btn-default btn-lg center-block btn-ne-main">New Statement</a>
-                </div>
+                </div><br><br>
         </div>
     </div>
 
@@ -51,6 +52,7 @@
             </p>
         </div>
     </footer>
+</div>
 {% endblock %}
 
 {% block footer_block %}
