--- a/templates/neverever/index.html
+++ b/templates/neverever/index.html
@@ -8,7 +8,6 @@
 {% endblock %}
 
 {% block body_block %}
-<div class="index-bg">
     <div class="page-header text-center">
         <h1>never/<wbr><b>ever</b></h1>
         <p class="lead">Play never have I ever. Wherever you are.</p>
@@ -21,7 +20,7 @@
                 </div>
                 <div class="row row-spacing">
                     <a href="/new-statement" class="btn btn-default btn-lg center-block btn-ne-main">New Statement</a>
-                </div><br>
+                </div><br><br>
         </div>
     </div>
 
@@ -52,7 +51,6 @@
             </p>
         </div>
     </footer>
-</div>
 {% endblock %}
 
 {% block footer_block %}
