--- a/static/css/neverever.css
+++ b/static/css/neverever.css
@@ -106,6 +106,12 @@ h1 {
     display: inline-block;
     margin-left: auto;
     margin-right: auto;
-    width: 90px;
+    width: 80px;
     margin: 10px 10px;
+}
+
+.cat-sep {
+    display: inline-block;
+    max-width: 10px;
+    width: 0%;
 }
