--- a/templates/neverever/index.html
+++ b/templates/neverever/index.html
@@ -26,7 +26,7 @@
 
     <div id="cookie_box">
         Our site requires cookies to function. By using this site you agree to nothing, because we
-        don't have any terms or conditions. Have fun. <a href="#" class="cookie_box_close"><strong>Close</strong>
+        don't have any terms or conditions. Have fun. <a href="#" class="cookie_box_close no-wrap"><strong>Close</strong>
         <span class="glyphicon glyphicon-remove"></span></a>
     </div>
 
