--- a/templates/neverever/play.html
+++ b/templates/neverever/play.html
@@ -82,6 +82,6 @@
     <script>$('input:checkbox').bootstrapSwitch('onText','Yeah');</script>
     <script>$('input:checkbox').bootstrapSwitch('offText','Nope');</script>
     {% if nPlayers >= 6 %}
-        <script>$('#add_button').prop('disabled', true);</script
+        <script>$('#add_button').prop('disabled', true);</script>
     {% endif %}
 {% endblock %}
