--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -14,7 +14,6 @@ html {
 }
 body {
   margin: 0;
-  background-color: #eeeeee;
 }
 
 article,
@@ -2536,7 +2535,7 @@ output {
   color: #555555;
   background-color: #ffffff;
   background-image: none;
-  border: 1px solid #e7e7e7;
+  border: 1px solid #dddddd;
   border-radius: 4px;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
@@ -3019,8 +3018,8 @@ fieldset[disabled] .btn {
 }
 .btn-default {
   color: #555555;
-  background-color: #eeeeee;
-  border-color: #e2e2e2;
+  background-color: #dddddd;
+  border-color: #cccccc;
 }
 .btn-default:hover,
 .btn-default:focus,
@@ -3423,7 +3422,7 @@ tbody.collapse.in {
   text-align: left;
   background-color: #ffffff;
   border: 1px solid #cccccc;
-  border: 1px solid #e7e7e7;
+  border: 1px solid #dddddd;
   border-radius: 4px;
   -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
@@ -3787,7 +3786,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   color: #555555;
   text-align: center;
   background-color: #eeeeee;
-  border: 1px solid #e7e7e7;
+  border: 1px solid #dddddd;
   border-radius: 4px;
 }
 .input-group-addon.input-sm {
@@ -3899,7 +3898,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   max-width: none;
 }
 .nav-tabs {
-  border-bottom: 1px solid #e7e7e7;
+  border-bottom: 1px solid #dddddd;
 }
 .nav-tabs > li {
   float: left;
@@ -3912,14 +3911,14 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   border-radius: 4px 4px 0 0;
 }
 .nav-tabs > li > a:hover {
-  border-color: #eeeeee #eeeeee #e7e7e7;
+  border-color: #eeeeee #eeeeee #dddddd;
 }
 .nav-tabs > li.active > a,
 .nav-tabs > li.active > a:hover,
 .nav-tabs > li.active > a:focus {
   color: #555555;
   background-color: #ffffff;
-  border: 1px solid #e7e7e7;
+  border: 1px solid #dddddd;
   border-bottom-color: transparent;
   cursor: default;
 }
@@ -3954,11 +3953,11 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav-tabs.nav-justified > .active > a,
 .nav-tabs.nav-justified > .active > a:hover,
 .nav-tabs.nav-justified > .active > a:focus {
-  border: 1px solid #e7e7e7;
+  border: 1px solid #dddddd;
 }
 @media (min-width: 768px) {
   .nav-tabs.nav-justified > li > a {
-    border-bottom: 1px solid #e7e7e7;
+    border-bottom: 1px solid #dddddd;
     border-radius: 4px 4px 0 0;
   }
   .nav-tabs.nav-justified > .active > a,
@@ -4022,11 +4021,11 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav-tabs-justified > .active > a,
 .nav-tabs-justified > .active > a:hover,
 .nav-tabs-justified > .active > a:focus {
-  border: 1px solid #e7e7e7;
+  border: 1px solid #dddddd;
 }
 @media (min-width: 768px) {
   .nav-tabs-justified > li > a {
-    border-bottom: 1px solid #e7e7e7;
+    border-bottom: 1px solid #dddddd;
     border-radius: 4px 4px 0 0;
   }
   .nav-tabs-justified > .active > a,
@@ -4379,8 +4378,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
 }
 .navbar-default {
-  background-color: #f8f8f8;
-  border-color: #e7e7e7;
+  background-color: #eeeeee;
+  border-color: #dddddd;
 }
 .navbar-default .navbar-brand {
   color: #333333;
@@ -4425,7 +4424,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .navbar-default .navbar-collapse,
 .navbar-default .navbar-form {
-  border-color: #e7e7e7;
+  border-color: #dddddd;
 }
 .navbar-default .navbar-nav > .open > a,
 .navbar-default .navbar-nav > .open > a:hover,
@@ -6777,7 +6776,7 @@ label {
 }
 .nav-tabs > li > a {
   margin-top: 6px;
-  border-color: #e7e7e7;
+  border-color: #dddddd;
   color: #333333;
   -webkit-transition: all 0.2s ease-in-out;
   -o-transition: all 0.2s ease-in-out;
@@ -6797,7 +6796,7 @@ label {
 .nav-tabs .open > a,
 .nav-tabs .open > a:hover,
 .nav-tabs .open > a:focus {
-  border-color: #e7e7e7;
+  border-color: #dddddd;
 }
 .nav-tabs > li.disabled > a:hover,
 .nav-tabs > li.disabled > a:focus {
@@ -6897,7 +6896,7 @@ label {
   font-weight: normal;
 }
 .progress {
-  border: 1px solid #e7e7e7;
+  border: 1px solid #dddddd;
   -webkit-box-shadow: inset 0 2px 0 rgba(0, 0, 0, 0.1);
   box-shadow: inset 0 2px 0 rgba(0, 0, 0, 0.1);
 }
@@ -6906,7 +6905,7 @@ label {
   box-shadow: inset 0 -4px 0 rgba(0, 0, 0, 0.15);
 }
 .well {
-  border: 1px solid #e7e7e7;
+  border: 1px solid #dddddd;
   -webkit-box-shadow: inset 0 2px 0 rgba(0, 0, 0, 0.05);
   box-shadow: inset 0 2px 0 rgba(0, 0, 0, 0.05);
 }
@@ -6937,12 +6936,12 @@ a.list-group-item-danger.active:focus {
   background-color: #ff291c;
 }
 .jumbotron {
-  border: 1px solid #e7e7e7;
+  border: 1px solid #dddddd;
   -webkit-box-shadow: inset 0 2px 0 rgba(0, 0, 0, 0.05);
   box-shadow: inset 0 2px 0 rgba(0, 0, 0, 0.05);
 }
 .panel {
-  border: 1px solid #e7e7e7;
+  border: 1px solid #dddddd;
   border-width: 0 1px 4px 1px;
 }
 .panel-default .close {
