--- a/templates/neverever/playOptions.html
+++ b/templates/neverever/playOptions.html
@@ -17,16 +17,16 @@
 
         {% for field in form.visible_fields %}
             {% if field.name == "nsfw" %}
-                <div id="sub-heading">
-                    <h4><span class="glyphicon glyphicon-eye-open"></span></h4>
-                    <h2>enable adult content</h2>
-                </div>
-                Enable NSFW (adult content) statements:<br>
-                <div class="cat-box">
-                   <input id="{{ field.auto_id }}" name="{{ field.html_name }}"
-                          {% if field.value %}checked="checked"{% endif %}
-                          type="checkbox">
-                </div>
+                 <div class="container row-spacing">
+                    <div id="sub-heading">
+                        <h4><span class="glyphicon glyphicon-eye-close"></span></h4>
+                        <h2>enable adult content</h2>
+                    </div>
+                     Enable NSFW (adult content) statements:<br>
+                     <div class="cat-box">
+                        <input id="{{ field.auto_id }}" name="{{ field.html_name }}" type="checkbox">
+                     </div>
+                 </div>
             {% endif %}
             {% if field.name == "categories" %}
                 <div id="sub-heading">
