--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -6937,6 +6937,7 @@ a.list-group-item-danger.active:focus {
 }
 .jumbotron {
   border: 1px solid #dddddd;
+  border-radius: 10px;
   -webkit-box-shadow: inset 0 2px 0 rgba(0, 0, 0, 0.05);
   box-shadow: inset 0 2px 0 rgba(0, 0, 0, 0.05);
 }
