Minor changes to the Session model (removed num_players field). App now displays Player's name instead of 'None' in player stats

--- a/templates/neverever/playSummary.html
+++ b/templates/neverever/playSummary.html
@@ -34,7 +34,12 @@
         <br /><b>Answers</b><br />
         {% for answers in player_answers %}
             {% for answer in answers %}
-                {{ answer.player.name }} answered {{ answer.answer }} for "{{ answer.statement }}" <br />
+                {% if answer.player.name %}
+                    {{ answer.player.name }}
+                {% else %}
+                    Player {{ answer.player.stamp }}
+                {% endif %}
+                answered {{ answer.answer }} for "{{ answer.statement }}" <br />
             {% endfor %}
         {% endfor %}
     {% endif %}
