--- a/templates/neverever/newStatement.html
+++ b/templates/neverever/newStatement.html
@@ -29,7 +29,8 @@
                             </div>
                           {% endif %}
                           {{ field.help_text }}...
-                          <input type="text" class="form-control new-statement" id="{{ field.auto_id }}" name="{{ field.name }}" placeholder="added a new statement.">
+                          <input type="text" class="form-control new-statement" id="{{ field.auto_id }}"
+                                 name="{{ field.name }}" placeholder="added a new statement.">
 
                       </div>
                     </div>
@@ -86,11 +87,6 @@
 {% block footer_block %}
     <!-- Switch -->
     <script src="{% static "js/bootstrap-switch.js" %}"></script>
-    <script>
-        $('input:checkbox').bootstrapSwitch();
-        $('input:checkbox').bootstrapSwitch('size','small');
-        $("[name='nsfw']").bootstrapSwitch('onText','NSFW');
-        $("[name='nsfw']").bootstrapSwitch('offText','SFW');
-        $("[name='nsfw']").bootstrapSwitch('onColor','warning');
-    </script>
+    <script src="{% static "js/switch-buttons.js" %}"></script>
+    <script src="{% static "js/nsfw-button.js" %}"></script>
 {% endblock %}
