--- a/templates/neverever/statementTitles.html
+++ b/templates/neverever/statementTitles.html
@@ -1,5 +1,5 @@
 {% if statements %}
-	Never have I ever...
+	<strong>Never have I ever...</strong>
     <br/>
     {% for statement in statements %}
         <span class="single_statement" data-title="{{statement.title}}">
