--- a/templates/neverever/play.html
+++ b/templates/neverever/play.html
@@ -30,7 +30,7 @@
     {% endif %}
     {% if no_more_statements %}
         <div class="container-fluid text-center">
-            <p class="alert alert-danger statement warning-spacing"><b class="warning-head">Sorry! :(</b><br>
+            <p id="No-statement" class="alert alert-danger statement warning-spacing"><b class="warning-head">Sorry! :(</b><br>
                 <b>There are no more statements to display.You played through all of them.</b><br>
                 Please select more categories, start a new game, or add statements yourself!</p>
         </div>
@@ -85,13 +85,4 @@
     <script src="{% static "js/neverever-ajax.js" %}"></script>
     <!-- Switch -->
     <script src="{% static "js/bootstrap-switch.js" %}"></script>
-
-    <!-- GIORGOS
-    {% if nPlayers >= 6 %}
-        DISABLE ADD BUTTON
-    {% endif %}
-    {% if no_more_statements %}
-        DISABLE ADD AND LIKE BUTTON
-    {% endif %}
-    -->
 {% endblock %}
