play screen update

--- a/templates/neverever/newStatement.html
+++ b/templates/neverever/newStatement.html
@@ -87,6 +87,6 @@
 {% block footer_block %}
     <!-- Switch -->
     <script src="{% static "js/bootstrap-switch.js" %}"></script>
-    <script src="{% static "js/switch-buttons.js" %}"></script>
+    <script src="{% static "js/switch-button.js" %}"></script>
     <script src="{% static "js/nsfw-button.js" %}"></script>
 {% endblock %}
