--- a/static/css/play.css
+++ b/static/css/play.css
@@ -26,6 +26,13 @@ h3 {
     float: right;
 }
 
+.player-box {
+    display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 115px;
+    margin: 15px 20px 15px 20px;
+}
 
 .warning-spacing {
   padding: 15px;
@@ -35,4 +42,8 @@ h3 {
 
 .warning-head {
   font-size: 48px;
+}
+
+#answer_form {
+    padding-top: 20px;
 }
