--- a/templates/neverever/play.html
+++ b/templates/neverever/play.html
@@ -40,24 +40,27 @@
             {% for form, player in formlist %}
                 {% csrf_token %}
                 {% for field in form.visible_fields %}
-                <div class="container row-spacing">
-                    <span class="player-name">
-                        {% if player.name != null %} 
-                            {{ player.name }}
-                        {% else %}
-                            <div class="editable_name" contenteditable="false" data-playernum="{{ player.stamp }}"
-                                 data-toggle="popover" title="What's your name?"
-                                 data-content="Click to enter your name, then press return to save!"
-                                 data-trigger="hover" data-placement="top">
-                                    Player {{ player.stamp }} <span class="glyphicon glyphicon-pencil weak-glyph"></span>
-                            </div>
-                        {% endif %}
+                <div class="player-box">
+                    <span class="player-name text-left">
+                        <div class="editable_name" contenteditable="false" data-playernum="{{ player.stamp }}"
+                             data-toggle="popover" title="What's your name?"
+                             data-content="Click to enter your name, then press return to save!"
+                             data-trigger="hover" data-placement="top">
+                            {% if player.name != null %}
+                                {{ player.name }}
+                            {% else %}
+                                Player {{ player.stamp }} <span class="glyphicon glyphicon-pencil weak-glyph"></span>
+                            {% endif %}
+                        </div>
                     </span>
                     <input id="{{ field.auto_id }}" name="{{ field.html_name }}" type="checkbox">
+                    {% if player.stamp|divisibleby:2 %}
+                        <br>
+                    {% endif %}
                 </div>
                 {% endfor %}
             {% endfor %}
-            <div class="container row-spacing">
+            <div class="container row-spacing-bottom">
                 <input class="btn btn-primary btn-lg center-block" type="submit" value="Next Statement">
             </div>
         </form>
