--- a/templates/neverever/statementStats.html
+++ b/templates/neverever/statementStats.html
@@ -37,6 +37,7 @@
         {% endif %}
   
     {% else %}
-        <strong>No answers yet for this statement</strong>
+        <strong style="font-size:200%">"Never have I ever {{ title }}":</strong> <br/>
+        No results yet for this statement
     {% endif %}
 <br />
