trying to avoid duplicated code

--- a/templates/neverever/answerButtons.html
+++ b/templates/neverever/answerButtons.html
@@ -22,7 +22,7 @@
         </div>
         {% endfor %}
     {% endfor %}
-    <div class="container row-spacing-bottom">
+    <div class="statement text-center row-spacing-bottom">
         <input class="btn btn-primary btn-lg center-block" type="submit" value="Next Statement">
     </div>
 </form>
