--- a/templates/neverever/index.html
+++ b/templates/neverever/index.html
@@ -31,25 +31,7 @@
     </div>
 
     <footer class="footer">
-      <div class="container text-center" id="session_footer">
-            <p class="text-muted">
-                Currently, there
-                {% if nSessions %}
-                    {% if nSessions > 1 %}are{% else %}is{% endif %}
-                    {{ nSessions }} active session{% if nSessions > 1 %}s{% endif %}
-                {% else %}
-                    are no active sessions
-                {% endif %}
-                    , with
-                {% if nPlayers %}
-                    {{ nPlayers }} player{% if nPlayers > 1 %}s{% endif %}
-                {% else %}
-                    no players
-                {% endif %}
-                <!-- loading animation -->
-                <span class="one">.</span><span class="two">.</span><span class="three">.</span>​
-            </p>
-        </div>
+      <div class="container text-center" id="session_footer"><!-- via AJAX --></div>
     </footer>
 {% endblock %}
 
