--- a/templates/neverever/play.html
+++ b/templates/neverever/play.html
@@ -35,7 +35,7 @@
                 Please select more categories, start a new game, or add statements yourself!</p>
         </div>
     {% else %}
-    <div id="answer_zone">
+    <div id="answer_zone" class="statement">
         <form id="answer_form" method="post" action="/play/">
             {% for form, player in formlist %}
                 {% csrf_token %}
@@ -60,7 +60,7 @@
                 </div>
                 {% endfor %}
             {% endfor %}
-            <div class="container row-spacing-bottom">
+            <div class="statement text-center row-spacing-bottom">
                 <input class="btn btn-primary btn-lg center-block" type="submit" value="Next Statement">
             </div>
         </form>
@@ -69,18 +69,15 @@
 
     <div class="statement text-left">
             <div class="inline">
-                <button id="add_button" class="btn btn-default" type="button">
-                    <span class="glyphicon glyphicon-plus"></span> Add Player</button>&nbsp;
                 <!--below section adds in the like button-->
                 <button id="likes" data-title="{{statement.title}}" class="btn btn-default" type="button">
                     <span class="glyphicon glyphicon-thumbs-up"></span> Like
-                </button>
+                </button>&nbsp;
+                <button id="add_button" class="btn btn-default" type="button">Add Player</button>
             </div>
             <div class="inline inline-right">
-                <a href="{% url 'play_options' %}" class="btn btn-default">
-                    <span class="glyphicon glyphicon-cog"></span> Options</a>&nbsp;
-                <a href="{% url 'play_summary' %}" class="btn btn-warning">
-                    <span class="glyphicon glyphicon-stats"></span> Your Stats</a>
+                <a href="{% url 'play_options' %}" class="btn btn-default">Options</a>&nbsp;
+                <a href="{% url 'play_summary' %}" class="btn btn-warning">Your Stats</a>
             </div>
     </div>
 {% endblock %}
@@ -90,18 +87,4 @@
     <script src="{% static "js/neverever-ajax.js" %}"></script>
     <!-- Switch -->
     <script src="{% static "js/bootstrap-switch.js" %}"></script>
-
-
-    <!-- outsource these tests -->
-    <!--
-    {% if nPlayers >= 6 %}
-        <script>disableAdd();</script>
-    {% endif %}
-    {% if no_more_statements %}
-        <script>
-            disableAdd();
-            disableLike();
-        </script>
-    {% endif %}
-    -->
 {% endblock %}
