--- a/templates/neverever/play.html
+++ b/templates/neverever/play.html
@@ -69,11 +69,11 @@
 
     <div class="statement text-left">
             <div class="inline">
+                <button id="add_button" class="btn btn-default" type="button">Add Player</button>&nbsp;
                 <!--below section adds in the like button-->
                 <button id="likes" data-title="{{statement.title}}" class="btn btn-default" type="button">
-                    <span class="glyphicon glyphicon-thumbs-up"></span> Like
-                </button>&nbsp;
-                <button id="add_button" class="btn btn-default" type="button">Add Player</button>
+                    Like <span class="glyphicon glyphicon-thumbs-up"></span>
+                </button>
             </div>
             <div class="inline inline-right">
                 <a href="{% url 'play_options' %}" class="btn btn-default">Options</a>&nbsp;
